discussion/kv_engine/155543/155543_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46827: Store reference to KVBucket in VBucket

We already do that for EPBucket, move it up in the hierarchy to VBucket.

Change-Id: I359b1c6995e2320b68f9ca696522fb418234ecf2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-06-10 14:32:32.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 14:37:30.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19317/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19317/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11314/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11734/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11734/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11462/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11462/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10386/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10386/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36702/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36702/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9739/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9739/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9739/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8334/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
